src/main/java/org/example/Error/NoClassDefFoundError.java
package org.example.Error;

/* child class of LinkageError ->Error ->Throwable */
public class NoClassDefFoundError {

    public static void main(String[] args) {
        Rani r = new Rani();
    }
}
class Rani{

}
